[gd_scene load_steps=8 format=3 uid="uid://ekwb1lq1wrgx"]

[ext_resource type="Texture2D" uid="uid://v1tfbhm53pei" path="res://Assets/Effects/FX/MuzzleFlash.png" id="1_3jkls"]
[ext_resource type="Script" uid="uid://bi0yn57hntfko" path="res://Code/Effects/MuzzleFlash.gd" id="1_bv43h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ymm4"]
atlas = ExtResource("1_3jkls")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv43h"]
atlas = ExtResource("1_3jkls")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1yete"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ymm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv43h")
}],
"loop": true,
"name": &"Flash",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_8w52s"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j2apa"]
gradient = SubResource("Gradient_8w52s")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)
metadata/_snap_enabled = true

[node name="MuzzleFlash" type="Node2D"]
script = ExtResource("1_bv43h")

[node name="FlashSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1yete")
animation = &"Flash"
frame_progress = 0.563186

[node name="FlashLight" type="PointLight2D" parent="."]
color = Color(1, 0.8, 0.4, 1)
energy = 0.0
texture = SubResource("GradientTexture2D_j2apa")
texture_scale = 0.5
metadata/use_color_temperature = true
metadata/color_temperature = 6500
metadata/color_filter = Color(1, 1, 1, 0)
